<package>
  <name>infuse_msgs</name>
  <version>0.1.0</version>
  <description>
    Standard InFuse ROS Messages
  </description>
  <maintainer email="laas-infuse@laas.fr">Tully Foote</maintainer>
  <license>BSD</license>

  <url type="website">https://redmine.laas.fr/projects/infuse</url>
  <url type="repository">git@redmine.laas.fr/laas/users/simon/infuse-msgs-ros.git</url>
  <author email="ellon.mendes@laas.fr">Morgan Quigley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
